[metadata]
name = aiopokeapi
description = An asynchronous API wrapper for the pokeapi.
author = beastmatser
long_description = file: assets/PYPI.md
long_description_content_type=text/markdown
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Natural Language :: English
    Framework :: AsyncIO
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
version = 0.1.2

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    aiofiles==0.8.0
    aiohttp>=3.7.4
python_requires = >=3.7
package_dir =
    =aiopoke

[options.packages.find]
where = aiopoke

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
aiopoke = py.typed

[flake8]
max-line-length = 160
ignore =
    W503
