[metadata]
name = aiopokeapi
description = An asynchronous API wrapper for the pokeapi.
author = beastmatser
long_description = file: assets/PYPI.md
long_description_content_type=text/markdown
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed
version = 0.1.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    aiofiles==23.2.1
    aiohttp>=3.7.4
python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
aiopoke = py.typed

[flake8]
max-line-length = 160
ignore =
    W503
